--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <option value='earth'>Earth</option>
                 <option value='mars'>Mars</option>
             </select>
-            <button onclick="calculateWeight()">calculate weight</button>
+            <button onclick="calculateWeight()">Calculate weight</button>
         </div>
     </header>
 
