--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                 <option value='venus'>Jupiter</option>
                 <option value='earth'>Earth</option>
                 <option value='mars'>Mars</option>
+                <option value='mars'>Moon</option>
+
             </select>
             <button onclick="calculateWeight()">Calculate weight</button>
         </div>
